--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=device-width, viewport-fit=cover" />
     <link rel="preload" href="script.js?v=1629107542493" as="script"/>
+    <link rel="icon" href="css/favicon.ico">
 <link rel="preload" href="media/panorama_20F5495D_34E7_A63F_41A0_860FB12A85DD_0/l/4/0_0.jpg?v=1629107542493" as="image"/>
 <link rel="preload" href="media/panorama_20F5495D_34E7_A63F_41A0_860FB12A85DD_0/r/4/0_0.jpg?v=1629107542493" as="image"/>
 <link rel="preload" href="media/panorama_20F5495D_34E7_A63F_41A0_860FB12A85DD_0/u/4/0_0.jpg?v=1629107542493" as="image"/>
